Added footer html & css, user guide img & docs folder

--- a/index.html
+++ b/index.html
@@ -58,6 +58,58 @@
         </div>
     </header>
 
+    <footer class="container-fluid">
+        <div id="footer-details" class="row">
+            <div class="col-sm-3">
+                <h5 class="uppercase footer-heading">user guide</h5>
+                <p>Download a copy of our user guide</p>
+                <a href="./assets/images/userguide.png" target="_blank" class="userguide">
+                    <i class="fa fa-file-download" aria-hidden="true"></i>
+                    <span class="sr-only">Download Link</span>
+                </a>
+            </div>
+            <div class="col-sm-3">
+                <h5 class="uppercase footer-heading">legal</h5>
+                <div>
+                    <a href="./assets/docs/TCs.docx" class="legal">Terms & Conditions</a>
+                </div>
+                <div class="legal">
+                    <a href="./assets/docs/disclaimer.docx" class="legal">Disclaimer</a>
+                </div>
+            </div>
+            <div class="contact-details col-sm-3">
+                <h5 class="uppercase footer-heading">contact details</h5>
+                <p>Address: 5 Harcourt Road, Dublin, D02</p>
+                <p>Phone: +44 7881 941 425</p>
+                <p>Email: info@shadowracing.ai</p>
+            </div>
+            <div class="col-sm-3">
+                <h5 class="uppercase footer-heading">Social</h5>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.facebook.com/">
+                            <i class="fab fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.twitter.com/">
+                            <i class="fab fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.linkedin.com/">
+                            <i class="fab fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
