About Us Section added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,31 @@
         </div>
     </header>
 
+    <section id="aboutus">
+        <div class="container-fluid">
+            <div class="row aboutus-section">
+                <div class="col-sm-6">
+                    <h3 class="about-heading uppercase text-center">
+                        Who are Shadow Racing AI?
+                    </h3>
+                    <i class="fa fa-question-circle text-center" aria-hidden="true"></i>
+                    <p class="about-us-text text-center">The Shadow Racing team is made up of individuals with a love for sport, coupled with an insatiable drive to use smart technology to predict the outcome of sporting events. For years people have tried to get a statistical edge in the
+                        horse markets and now with the rise of AI and machine learning we’re able to leverage the power of computers to find those edges for us. This means providing our users with a consistent monthly profit and a high return on investment.
+                    </p>
+                </div>
+                <div class="col-sm-6">
+                    <h3 class="about-heading uppercase text-center">
+                        How does the system work?
+                    </h3>
+                    <i class="fa fa-cogs text-center" aria-hidden="true"></i>
+                    <p class="about-us-text text-center">Tips are provided prior to 11:00am each day and odds will range from 2/1 all the up to 14/1. As with any tipping service it’s important that users place each bet and attempt to obtain the best odds available to them. Over the past
+                        12 months our selections have made a profit at the Betfair Starting Price, however placing the bets with a Best Odds Guaranteed bookmaker at the time of release will yield the best returns.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-3">
