Results Section added, updates made to media queries

--- a/index.html
+++ b/index.html
@@ -83,6 +83,29 @@
         </div>
     </section>
 
+    <section id="results">
+        <div class="container-fluid results-section">
+            <div class="row">
+                <div class="col">
+                    <i class="fas fa-poll" aria-hidden="true"></i>
+                    <h3 class="results-heading uppercase text-center">
+                        our results
+                    </h3>
+                    <h5 class="results-message uppercase text-center">
+                        the chart below shows our points profit at the median bookmaker price
+                    </h5>
+                </div>
+            </div>
+            <div>
+                <div id="chart" class="row chart-section text-center img-responsive">
+                    <div class="col">
+                        <img src="./assets/images/chart2.png" class="text-center img-responsive">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-3">
