Addition of contact form

--- a/index.html
+++ b/index.html
@@ -106,6 +106,39 @@
         </div>
     </section>
 
+    <section id="contact">
+        <div class="container-fluid">
+            <div class="row contact-section">
+                <div class="col">
+                    <i class="fas fa-envelope-open-text" aria-hidden="true"></i>
+                    <h3 class="contact-heading uppercase text-center">
+                        Want to know more or request access to our system?
+                    </h3>
+                    <h5 class="contact-message uppercase text-center">
+                        Send us a message using the form below
+                    </h5>
+                    <div class="center-form">
+
+                        <input type="text" name="name" id="fullname" class="form-control form-margin" placeholder="Name" required />
+
+                        <input type="text" name="email" id="emailaddress" class="form-control form-margin" placeholder="Email" required />
+
+                        <input type="text" name="phone" id="phonenumber" class="form-control form-margin" placeholder="Mobile Number" required />
+
+                        <textarea rows="5" name="message" id="message" class="form-control form-margin" placeholder="Type your message here" required></textarea>
+
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary uppercase">Request access now</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-3">
