Affiliates section added, bookmaker logos uploaded

--- a/index.html
+++ b/index.html
@@ -118,22 +118,89 @@
                         Send us a message using the form below
                     </h5>
                     <div class="center-form">
-
                         <input type="text" name="name" id="fullname" class="form-control form-margin" placeholder="Name" required />
-
                         <input type="text" name="email" id="emailaddress" class="form-control form-margin" placeholder="Email" required />
-
                         <input type="text" name="phone" id="phonenumber" class="form-control form-margin" placeholder="Mobile Number" required />
-
                         <textarea rows="5" name="message" id="message" class="form-control form-margin" placeholder="Type your message here" required></textarea>
-
                         <div class="form-row text-center">
                             <div class="col">
                                 <button type="submit" class="btn btn-secondary uppercase">Request access now</button>
                             </div>
                         </div>
-
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="affiliates">
+        <div class="container-fluid">
+            <div class="row affiliate-heading">
+                <div class="col">
+                    <i class="fas fa-handshake" aria-hidden="true"></i>
+                    <h3 class="uppercase text-center">
+                        affiliates
+                    </h3>
+                    <h5 class="affiliate-message uppercase text-center">
+                        Click the bookmaker logos below to take advantage of our special offers
+                    </h5>
+                </div>
+            </div>
+            <div id="affiliate-link" class="row text-center">
+                <div class="col-sm-3">
+                    <a target="_blank" href="https://www.ladbrokes.com/">
+                        <img src="./assets/images/Ladbrokes.jpg" class="text-center bookie-logo">
+                    </a>
+                    <h5 class="bookie text-center">Ladbrokes</h5>
+                    <h6 class="offer-text text-center">Free £50 bet when place a bet of £20</h6>
+                </div>
+                <div class="col-sm-3">
+                    <a target="_blank" href="https://www.bet365.com/">
+                        <img src="./assets/images/Bet365.jpg" class="text-center bookie-logo">
+                    </a>
+                    <h5 class="bookie text-center">Bet365</h5>
+                    <h6 class="offer-text text-center">£200 of free bets when you join now</h6>
+                </div>
+                <div class="col-sm-3">
+                    <a target="_blank" href="https://www.williamhill.com/">
+                        <img src="./assets/images/WilliamHill.jpg" class="text-center bookie-logo">
+                    </a>
+                    <h5 class="bookie text-center">William Hill</h5>
+                    <h6 class="offer-text text-center">Free £10 Bet when you join</h6>
+                </div>
+                <div class="col-sm-3">
+                    <a target="_blank" href="https://www.betvictor.com/">
+                        <img src="./assets/images/BetVic.jpg" class="text-center bookie-logo">
+                    </a>
+                    <h5 class="bookie text-center">Bet Victor</h5>
+                    <h6 class="offer-text text-center">Free £25 Bet, sign up today</h6>
+                </div>
+                <div class="col-sm-3">
+                    <a target="_blank" href="https://www.betfair.com/exchange">
+                        <img src="./assets/images/Betfair.jpg" class="text-center bookie-logo">
+                    </a>
+                    <h5 class="bookie text-center">Betfair</h5>
+                    <h6 class="offer-text text-center">Free £20 bet when you join now</h6>
+                </div>
+                <div class="col-sm-3">
+                    <a target="_blank" href="https://www.smarkets.com/">
+                        <img src="./assets/images/smarkets.jpg" class="text-center bookie-logo">
+                    </a>
+                    <h5 class="bookie text-center">Smarkets</h5>
+                    <h6 class="offer-text text-center">£100 of free bets when you join now</h6>
+                </div>
+                <div class="col-sm-3">
+                    <a target="_blank" href="https://www.matchbook.com/">
+                        <img src="./assets/images/matchbook.jpg" class="text-center bookie-logo">
+                    </a>
+                    <h5 class="bookie text-center">Matchbook</h5>
+                    <h6 class="offer-text text-center">3 x free £10 Bet when you join</h6>
+                </div>
+                <div class="col-sm-3">
+                    <a target="_blank" href="https://www.betdaq.com/">
+                        <img src="./assets/images/Betdaq.jpg" class="text-center bookie-logo">
+                    </a>
+                    <h5 class="bookie text-center">Betdaq</h5>
+                    <h6 class="offer-text text-center">Bet £20 get £20 as a free bet</h6>
                 </div>
             </div>
         </div>
@@ -155,7 +222,7 @@
                     <a href="./assets/docs/TCs.docx" class="legal">Terms & Conditions</a>
                 </div>
                 <div class="legal">
-                    <a href="./assets/docs/disclaimer.docx" class="legal">Disclaimer</a>
+                    <a href="./assets/docs/Disclaimer.docx" class="legal">Disclaimer</a>
                 </div>
             </div>
             <div class="contact-details col-sm-3">
