--- a/index.html
+++ b/index.html
@@ -265,3 +265,21 @@
         $('.collapse').collapse('hide');
     })
 </script>
+
+<script>
+var supports = (function() {
+    var d = document.documentElement,
+        c = "ontouchstart" in window || navigator.msMaxTouchPoints;
+    if (c) {
+        d.className += " touch";
+        return {
+            touch: true
+        }
+    } else {
+        d.className += " no-touch";
+        return {
+            touch: false
+        }
+    }
+})();
+</script>
