--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
                     <h5 class="contact-message uppercase text-center">
                         Send us a message using the form below
                     </h5>
-                    <div class="center-form">
-                        <input type="text" name="name" id="fullname" class="form-control form-margin" placeholder="Name" required />
-                        <input type="text" name="email" id="emailaddress" class="form-control form-margin" placeholder="Email" required />
-                        <input type="text" name="phone" id="phonenumber" class="form-control form-margin" placeholder="Mobile Number" required />
-                        <textarea rows="5" name="message" id="message" class="form-control form-margin" placeholder="Type your message here" required></textarea>
+                    <form class="center-form">
+                        <input type="text" name="name" id="fullname" class="form-control form-margin" placeholder="Name" required="true" />
+                        <input type="text" name="email" id="emailaddress" class="form-control form-margin" placeholder="Email" required="true" />
+                        <input type="text" name="phone" id="phonenumber" class="form-control form-margin" placeholder="Mobile Number" required="true" />
+                        <textarea rows="5" name="message" id="message" class="form-control form-margin" placeholder="Type your message here" required="true"></textarea>
                         <div class="form-row text-center">
                             <div class="col">
                                 <button type="submit" class="btn btn-secondary uppercase">Request access now</button>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -266,20 +266,3 @@
     })
 </script>
 
-<script>
-var supports = (function() {
-    var d = document.documentElement,
-        c = "ontouchstart" in window || navigator.msMaxTouchPoints;
-    if (c) {
-        d.className += " touch";
-        return {
-            touch: true
-        }
-    } else {
-        d.className += " no-touch";
-        return {
-            touch: false
-        }
-    }
-})();
-</script>
