Tidying up HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -16,6 +15,9 @@
 </head>
 
 <body>
+
+<!--*****LANDING PAGE*****-->
+
     <header id="home">
         <nav class="navbar fixed-top navbar-right">
             <a href="" class="navbar-brand"></a>
@@ -56,6 +58,8 @@
         </div>
     </header>
 
+<!--*****ABOUT US SECTION*****-->
+
     <section id="aboutus">
         <div class="container-fluid">
             <div class="row aboutus-section">
@@ -81,6 +85,8 @@
         </div>
     </section>
 
+<!--*****RESULTS SECTION*****-->
+
     <section id="results">
         <div class="container-fluid results-section">
             <div class="row">
@@ -103,6 +109,8 @@
             </div>
         </div>
     </section>
+
+<!--*****CONTACT FORM*****-->
 
     <section id="contact">
         <div class="container-fluid">
@@ -130,6 +138,9 @@
             </div>
         </div>
     </section>
+
+<!--*****AFFILIATES SECTION*****-->
+
     <section id="affiliates">
         <div class="container-fluid">
             <div class="row affiliate-heading">
@@ -204,6 +215,8 @@
         </div>
     </section>
 
+<!--*****FOOTER SECTION*****-->
+
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-3">
@@ -250,19 +263,18 @@
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
-
                 </ul>
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
+
+<!--*****JAVASCRIPT*****-->
 
 <script>
     $(document).on('click', function() {
         $('.collapse').collapse('hide');
     })
 </script>
-
