Tidy up HTML with comments

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <!--*****LANDING PAGE*****-->
 
     <header id="home">
+        <!--*****NAVBAR TOGGLER SECTION COLLAPSED AT ALL TIMES*****-->
         <nav class="navbar fixed-top navbar-right">
             <a href="" class="navbar-brand"></a>
             <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#shadow-nav" aria-controls="navbar" aria-expanded="false">
@@ -47,7 +48,7 @@
                 </ul>
             </div>
         </nav>
-
+        <!--*****HOME PAGE BACKGROUND, LOGO & ICON*****-->
         <div class="bg-img">
             <div id="logo">
                 <img src="./assets/images/trans.png" class="text-center full-logo">
@@ -101,10 +102,11 @@
                     </h5>
                 </div>
             </div>
+            <!--*****RESPONSIVE CHART IMAGE*****-->
             <div>
-                <div id="chart" class="row chart-section text-center img-responsive">
+                <div id="chart" class="row chart-section text-center">
                     <div class="col">
-                        <img src="./assets/images/chart2.png" class="text-center img-responsive">
+                        <img src="./assets/images/chart2.png" class="text-center">
                     </div>
                 </div>
             </div>
