reduce margins logo

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <h5 class="contact-message uppercase text-center">
                         Send us a message using the form below
                     </h5>
-                    <form class="center-form">
+                    <form class="center-form" action="mailto:richard.hepworth@gmail.com">
                         <input type="text" name="name" id="fullname" class="form-control form-margin" placeholder="Name" required="true" />
                         <input type="text" name="email" id="emailaddress" class="form-control form-margin" placeholder="Email" required="true" />
                         <input type="text" name="phone" id="phonenumber" class="form-control form-margin" placeholder="Mobile Number" required="true" />
