remove target # from chevron

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <img src="./assets/images/trans.png" class="text-center full-logo">
             </div>
             <div class="tagline">Using Artificial Intelligence to beat the horse markets</div>
-            <a target="#" href="#aboutus">
+            <a href="#aboutus">
                 <i class="fas fa-chevron-circle-down" aria-hidden="true"></i>
             </a>
         </div>
