Update to About me wording

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                         How does the system work?
                     </h3>
                     <i class="fa fa-cogs text-center" aria-hidden="true"></i>
-                    <p class="about-us-text text-center">Tips are provided prior to 11:00am each day and odds will range from 2/1 all the up to 14/1. As with any tipping service it’s important that users place each bet and attempt to obtain the best odds available to them. Over the past
-                        12 months our selections have made a profit at the Betfair Starting Price, however placing the bets with a Best Odds Guaranteed bookmaker at the time of release will yield the best returns.
+                    <p class="about-us-text text-center">Tips are provided prior to 11:00am via email, so no sitting infront of a computer all day. Odds range from 2/1 all the way up to 14/1. As with any tipping service it’s important that users place each bet and attempt to obtain the best odds available to them. Over the past
+                        12 months our selections have made a profit at the Betfair Starting Price, however placing the bets with a Best Odds Guaranteed bookmaker at the time of release will yield the best returns. You can see our full year results on the chart below.
                     </p>
                 </div>
             </div>
