--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div id="logo">
                 <img src="./assets/images/trans.png" class="text-center full-logo">
             </div>
-            <div class="tagline">Using Artificial Intelligence to beat the horse markets</div>
+            <div class="tagline text-center">Using Artificial Intelligence to beat the horse markets</div>
             <a href="#aboutus">
-                <i class="fas fa-chevron-circle-down" aria-hidden="true"></i>
+                <i class="fas fa-chevron-circle-down text-center" aria-hidden="true"></i>
             </a>
         </div>
     </header>
@@ -64,22 +64,22 @@
 
     <section id="aboutus">
         <div class="container-fluid">
-            <div class="row aboutus-section">
+            <div class="row aboutus-section text-center">
                 <div class="col-sm-6">
-                    <h3 class="about-heading uppercase text-center">
+                    <h3 class="about-heading uppercase ">
                         Who are Shadow Racing AI?
                     </h3>
-                    <i class="fa fa-question-circle text-center" aria-hidden="true"></i>
-                    <p class="about-us-text text-center">The Shadow Racing team is made up of individuals with a love for sport, coupled with an insatiable drive to use smart technology to predict the outcome of sporting events. For years people have tried to get a statistical edge in the
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                    <p class="about-us-text">The Shadow Racing team is made up of individuals with a love for sport, coupled with an insatiable drive to use smart technology to predict the outcome of sporting events. For years people have tried to get a statistical edge in the
                         horse markets and now with the rise of AI and machine learning we’re able to leverage the power of computers to find those edges for us. This means providing our users with a consistent monthly profit and a high return on investment.
                     </p>
                 </div>
                 <div class="col-sm-6">
-                    <h3 class="about-heading uppercase text-center">
+                    <h3 class="about-heading uppercase">
                         How does the system work?
                     </h3>
-                    <i class="fa fa-cogs text-center" aria-hidden="true"></i>
-                    <p class="about-us-text text-center">Tips are provided prior to 11:00am via email, so no sitting infront of a computer all day. Odds range from 2/1 all the way up to 14/1. As with any tipping service it’s important that users place each bet and attempt to obtain the best odds available to them. Over the past
+                    <i class="fa fa-cogs" aria-hidden="true"></i>
+                    <p class="about-us-text">Tips are provided prior to 11:00am via email, so no sitting infront of a computer all day. Odds range from 2/1 all the way up to 14/1. As with any tipping service it’s important that users place each bet and attempt to obtain the best odds available to them. Over the past
                         12 months our selections have made a profit at the Betfair Starting Price, however placing the bets with a Best Odds Guaranteed bookmaker at the time of release will yield the best returns. You can see our full year results on the chart below.
                     </p>
                 </div>
@@ -90,23 +90,23 @@
 <!--*****RESULTS SECTION*****-->
 
     <section id="results">
-        <div class="container-fluid results-section">
+        <div class="container-fluid results-section text-center">
             <div class="row">
                 <div class="col">
-                    <i class="fas fa-poll" aria-hidden="true"></i>
-                    <h3 class="results-heading uppercase text-center">
+                    <i class="fas fa-poll " aria-hidden="true"></i>
+                    <h3 class="results-heading uppercase ">
                         our results
                     </h3>
-                    <h5 class="results-message uppercase text-center">
+                    <h5 class="results-message uppercase">
                         the chart below shows our points profit at the median bookmaker price
                     </h5>
                 </div>
             </div>
             <!--*****RESPONSIVE CHART IMAGE*****-->
             <div>
-                <div id="chart" class="row chart-section text-center">
+                <div id="chart" class="row chart-sectionr">
                     <div class="col">
-                        <img src="./assets/images/chart2.png" class="text-center">
+                        <img src="./assets/images/chart2.png">
                     </div>
                 </div>
             </div>
@@ -117,13 +117,13 @@
 
     <section id="contact">
         <div class="container-fluid">
-            <div class="row contact-section">
+            <div class="row contact-section text-center">
                 <div class="col">
-                    <i class="fas fa-envelope-open-text" aria-hidden="true"></i>
-                    <h3 class="contact-heading uppercase text-center">
+                    <i class="fas fa-envelope-open-text " aria-hidden="true"></i>
+                    <h3 class="contact-heading uppercase">
                         Want to know more or request access to our system?
                     </h3>
-                    <h5 class="contact-message uppercase text-center">
+                    <h5 class="contact-message uppercase">
                         Send us a message using the form below
                     </h5>
                     <form class="center-form" action="mailto:richard.hepworth@gmail.com">
@@ -131,7 +131,7 @@
                         <input type="text" name="email" id="emailaddress" class="form-control form-margin" placeholder="Email" required="true" />
                         <input type="text" name="phone" id="phonenumber" class="form-control form-margin" placeholder="Mobile Number" required="true" />
                         <textarea rows="5" name="message" id="message" class="form-control form-margin" placeholder="Type your message here" required="true"></textarea>
-                        <div class="form-row text-center">
+                        <div class="form-row">
                             <div class="col">
                                 <button type="submit" class="btn btn-secondary uppercase">Request access now</button>
                             </div>
@@ -146,13 +146,13 @@
 
     <section id="affiliates">
         <div class="container-fluid">
-            <div class="row affiliate-heading">
+            <div class="row affiliate-heading text-center">
                 <div class="col">
-                    <i class="fas fa-handshake" aria-hidden="true"></i>
-                    <h3 class="uppercase text-center">
+                    <i class="fas fa-handshake " aria-hidden="true"></i>
+                    <h3 class="uppercase">
                         affiliates
                     </h3>
-                    <h5 class="affiliate-message uppercase text-center">
+                    <h5 class="affiliate-message uppercase">
                         Click the bookmaker logos below to take advantage of our special offers
                     </h5>
                 </div>
@@ -160,59 +160,59 @@
             <div id="affiliate-link" class="row text-center">
                 <div class="col-sm-3">
                     <a target="_blank" href="https://www.ladbrokes.com/">
-                        <img src="./assets/images/Ladbrokes.jpg" class="text-center bookie-logo">
+                        <img src="./assets/images/Ladbrokes.jpg" class=" bookie-logo">
                     </a>
-                    <h5 class="bookie text-center">Ladbrokes</h5>
-                    <h6 class="offer-text text-center">Free £50 bet when place a bet of £20</h6>
+                    <h5 class="bookie ">Ladbrokes</h5>
+                    <h6 class="offer-text">Free £50 bet when place a bet of £20</h6>
                 </div>
                 <div class="col-sm-3">
                     <a target="_blank" href="https://www.bet365.com/">
-                        <img src="./assets/images/Bet365.jpg" class="text-center bookie-logo">
+                        <img src="./assets/images/Bet365.jpg" class="bookie-logo">
                     </a>
-                    <h5 class="bookie text-center">Bet365</h5>
-                    <h6 class="offer-text text-center">£200 of free bets when you join now</h6>
+                    <h5 class="bookie ">Bet365</h5>
+                    <h6 class="offer-text">£200 of free bets when you join now</h6>
                 </div>
                 <div class="col-sm-3">
                     <a target="_blank" href="https://www.williamhill.com/">
-                        <img src="./assets/images/WilliamHill.jpg" class="text-center bookie-logo">
+                        <img src="./assets/images/WilliamHill.jpg" class="bookie-logo">
                     </a>
-                    <h5 class="bookie text-center">William Hill</h5>
-                    <h6 class="offer-text text-center">Free £10 Bet when you join</h6>
+                    <h5 class="bookie ">William Hill</h5>
+                    <h6 class="offer-text ">Free £10 Bet when you join</h6>
                 </div>
                 <div class="col-sm-3">
                     <a target="_blank" href="https://www.betvictor.com/">
-                        <img src="./assets/images/BetVic.jpg" class="text-center bookie-logo">
+                        <img src="./assets/images/BetVic.jpg" class=" bookie-logo">
                     </a>
-                    <h5 class="bookie text-center">Bet Victor</h5>
-                    <h6 class="offer-text text-center">Free £25 Bet, sign up today</h6>
+                    <h5 class="bookie ">Bet Victor</h5>
+                    <h6 class="offer-text">Free £25 Bet, sign up today</h6>
                 </div>
                 <div class="col-sm-3">
                     <a target="_blank" href="https://www.betfair.com/exchange">
-                        <img src="./assets/images/Betfair.jpg" class="text-center bookie-logo">
+                        <img src="./assets/images/Betfair.jpg" class=" bookie-logo">
                     </a>
-                    <h5 class="bookie text-center">Betfair</h5>
-                    <h6 class="offer-text text-center">Free £20 bet when you join now</h6>
+                    <h5 class="bookie">Betfair</h5>
+                    <h6 class="offer-text ">Free £20 bet when you join now</h6>
                 </div>
                 <div class="col-sm-3">
                     <a target="_blank" href="https://www.smarkets.com/">
-                        <img src="./assets/images/smarkets.jpg" class="text-center bookie-logo">
+                        <img src="./assets/images/smarkets.jpg" class="bookie-logo">
                     </a>
-                    <h5 class="bookie text-center">Smarkets</h5>
-                    <h6 class="offer-text text-center">£100 of free bets when you join now</h6>
+                    <h5 class="bookie">Smarkets</h5>
+                    <h6 class="offer-text ">£100 of free bets when you join now</h6>
                 </div>
                 <div class="col-sm-3">
                     <a target="_blank" href="https://www.matchbook.com/">
-                        <img src="./assets/images/matchbook.jpg" class="text-center bookie-logo">
+                        <img src="./assets/images/matchbook.jpg" class=" bookie-logo">
                     </a>
-                    <h5 class="bookie text-center">Matchbook</h5>
-                    <h6 class="offer-text text-center">3 x free £10 Bet when you join</h6>
+                    <h5 class="bookie">Matchbook</h5>
+                    <h6 class="offer-text ">3 x free £10 Bet when you join</h6>
                 </div>
                 <div class="col-sm-3">
                     <a target="_blank" href="https://www.betdaq.com/">
-                        <img src="./assets/images/Betdaq.jpg" class="text-center bookie-logo">
+                        <img src="./assets/images/Betdaq.jpg" class=" bookie-logo">
                     </a>
-                    <h5 class="bookie text-center">Betdaq</h5>
-                    <h6 class="offer-text text-center">Bet £20 get £20 as a free bet</h6>
+                    <h5 class="bookie">Betdaq</h5>
+                    <h6 class="offer-text ">Bet £20 get £20 as a free bet</h6>
                 </div>
             </div>
         </div>
