correct typo in html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <!--*****RESPONSIVE CHART IMAGE*****-->
             <div>
-                <div id="chart" class="row chart-sectionr">
+                <div id="chart" class="row chart-section">
                     <div class="col">
                         <img src="./assets/images/chart2.png">
                     </div>
