update social icons alignment

--- a/index.html
+++ b/index.html
@@ -248,19 +248,19 @@
             <div class="col-sm-3">
                 <h5 class="uppercase footer-heading">Social</h5>
                 <ul class="list-inline social-links">
-                    <li class="list-inline-item">
+                    <li class="list-inline-item text-center">
                         <a target="_blank" href="https://www.facebook.com/">
                             <i class="fab fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
-                    <li class="list-inline-item">
+                    <li class="list-inline-item text-center">
                         <a target="_blank" href="https://www.twitter.com/">
                             <i class="fab fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
-                    <li class="list-inline-item">
+                    <li class="list-inline-item text-center">
                         <a target="_blank" href="https://www.linkedin.com/">
                             <i class="fab fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
